--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,21 +27,22 @@
 
   <body class="bp">
     <div class="page-container">
-      <div class="page-header">
+      <div class="page-sidebar">
 
-        <a href="/"><h1 class="site-title">
-          Zero Wind :: Jamie Wong
-        </h1></a>
+        <div class="zero-wind">
+          <a href="/"><h1 class="site-title">
+            Zero Wind
+          </h1></a>
+        </div>
+
+        <h2 class='my-name'>Jamie Wong</h2>
 
         <div class="page-nav">
           <ul>
-            <li><a href="/">Blog</a></li>
-            <li>&bull;</li>
-            <li><a href="/resume">Resume</a></li>
-            <li>&bull;</li>
-            <li><a href="https://github.com/phleet">Github</a></li>
-            <li>&bull;</li>
-            <li><a href="http://stackoverflow.com/users/303911/jamie-wong">Stack Overflow</a></li>
+            <li><a href="/">blog</a></li>
+            <li><a href="/resume">resume</a></li>
+            <li><a href="https://github.com/phleet">github</a></li>
+            <li><a href="http://stackoverflow.com/users/303911/jamie-wong">stack overflow</a></li>
           </ul>
         </div>
       </div>
@@ -50,10 +51,8 @@
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         {{ content }}
       </div>
-      <div class="page-footer">
-        Copyright © 2011 Zero Wind - Jamie Wong
-      </div>
+
+      <div class="clear">
     </div>
   </body>
-
 </html>
