--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -1,4 +1,3 @@
-$page-bg: #2C2C29
 $orange: rgb(240, 140, 60)
 
 // This import applies a global reset to any page that imports this stylesheet.
@@ -28,6 +27,9 @@ $orange: rgb(240, 140, 60)
 // If you are doing a lot of stylesheet concatenation, it is suggested
 // that you scope your blueprint styles, so that you can better control
 // what pages use blueprint when stylesheets are concatenated together.
+
+$body-bg: #eee
+
 body.bp
   @include blueprint-typography(true)
   @include blueprint-utilities
@@ -40,7 +42,7 @@ body.bp
   width: 100%
   min-height: 100%
 
-  background-color: $page-bg
+  background-color: $body-bg
 
   a
     text-decoration: none
@@ -61,25 +63,28 @@ $container-width: 800px
   width: $container-width
 
 .page-sidebar
+  $sidebar-bg: #2C2C29
+  background-color: $sidebar-bg
+
   position: fixed
   width: $sidebar-width
 
-  min-height: 100%
+  height: 100%
 
-  $zero-wind-bg: lighten($page-bg, 30%)
+  $zero-wind-bg: lighten($sidebar-bg, 30%)
 
   .zero-wind
     margin: 20px
     padding: 10px
-    border: 1px solid lighten($page-bg, 45%)
+    border: 1px solid lighten($sidebar-bg, 45%)
 
     +background(linear-gradient(top, lighten($zero-wind-bg, 5%), darken($zero-wind-bg, 5%)))
     +border-radius(10px)
-    +box-shadow(darken($page-bg, 10%) 0 3px 20px)
+    +box-shadow(darken($sidebar-bg, 10%) 0 3px 20px)
 
     h1
       font-size: 36px
-      color: $page-bg
+      color: $sidebar-bg
       +text-shadow(lighten($zero-wind-bg, 10%) 0 1px 2px, darken($zero-wind-bg, 10%) 0 -1px 2px)
       text-align: center
       text-decoration: none
@@ -89,11 +94,11 @@ $container-width: 800px
     font-size: 22px
     text-align: center
     color: $zero-wind-bg
-    +text-shadow(lighten($page-bg, 10%) 0 1px 2px, darken($page-bg, 5%) 0 -1px 2px)
+    +text-shadow(lighten($sidebar-bg, 10%) 0 1px 2px, darken($sidebar-bg, 5%) 0 -1px 2px)
     margin: 0 0 25px 0
 
   .page-nav
-    +text-shadow(lighten($page-bg, 10%) 0 1px 1px, darken($page-bg, 5%) 0 -1px 1px)
+    +text-shadow(lighten($sidebar-bg, 10%) 0 1px 1px, darken($sidebar-bg, 5%) 0 -1px 1px)
 
     $link-color: $zero-wind-bg
 
@@ -117,11 +122,13 @@ $container-width: 800px
       line-height: 30px
 
     li + li
-      border-top: 1px solid lighten($page-bg, 10%)
+      border-top: 1px solid lighten($sidebar-bg, 10%)
 
 .page-content
+  $padding: 15px
+  padding: $padding
+
   position: absolute
   margin-left: $sidebar-width
-  background-color: white
   min-height: 100%
-  width: $container-width - $sidebar-width
+  width: $container-width - $sidebar-width - 2*$padding
