Added unnecessary zero wind hover

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -90,6 +90,9 @@ $container-width: 800px
       text-decoration: none
       margin: 0
 
+      &:hover
+        color: lighten($sidebar-bg, 10%)
+
   h2.my-name
     font-size: 22px
     text-align: center
