--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -98,7 +98,19 @@ $container-width: 800px
     text-align: center
     color: $zero-wind-bg
     +text-shadow(lighten($sidebar-bg, 10%) 0 1px 2px, darken($sidebar-bg, 5%) 0 -1px 2px)
-    margin: 0 0 25px 0
+
+  .short-bio
+    +text-shadow(lighten($sidebar-bg, 10%) 0 1px 1px, darken($sidebar-bg, 5%) 0 -1px 1px)
+    color: $zero-wind-bg
+    font-style: italic
+    font-size: 12px
+    padding: 0 15px
+    margin: 0 0 5px 0
+    text-align: justify
+
+    p
+      text-indent: 2em
+      margin: 0
 
   .page-nav
     +text-shadow(lighten($sidebar-bg, 10%) 0 1px 1px, darken($sidebar-bg, 5%) 0 -1px 1px)
@@ -127,11 +139,40 @@ $container-width: 800px
     li + li
       border-top: 1px solid lighten($sidebar-bg, 10%)
 
+$padding: 15px
+$content-width: $container-width - $sidebar-width - 2*$padding
+
 .page-content
-  $padding: 15px
   padding: $padding
 
   position: absolute
   margin-left: $sidebar-width
   min-height: 100%
   width: $container-width - $sidebar-width - 2*$padding
+
+.post-list
+  ul.post-list-ul
+    margin: 0
+    padding: 0
+
+  li + li
+    border-top: 1px solid darken($body-bg, 15%)
+
+  li
+    list-style: none
+    font-size: 14px
+
+    $date-width: 150px
+    $line-height: 30px
+
+    a
+      width: $content-width - $date-width
+      line-height: $line-height
+
+    span.date
+      color: darken($body-bg, 30%)
+      font-style: italic
+      line-height: $line-height
+      width: $date-width
+      float: right
+      text-align: right
