--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,24 @@
 ---
 layout: default
 ---
-{% if page.date %}<div class="postdate">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</div>{% endif %}
+{% if page.date %}
+<div class="post-date">
+  {{ page.date | date_to_long_string }}
+</div>
+{% endif %}
 
 <div class="post">
 {{ content }}
 </div>
- 
-<div id="related">
+
+<div class="related post-list">
   <h2>Related Posts</h2>
-  <ul class="posts">
+  <ul class="post-list-ul">
     {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+        <span class='date'>{{ post.date | date_to_long_string }}</span>
+      </li>
     {% endfor %}
   </ul>
 </div>
