--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -1,5 +1,3 @@
-$orange: rgb(240, 140, 60)
-
 // This import applies a global reset to any page that imports this stylesheet.
 @import blueprint/reset
 
@@ -28,6 +26,10 @@ $orange: rgb(240, 140, 60)
 // that you scope your blueprint styles, so that you can better control
 // what pages use blueprint when stylesheets are concatenated together.
 
+$font-color: #503e2b
+$blueprint-font-size: 14px
+$header-color: $font-color
+
 $body-bg: #eee
 
 body.bp
@@ -50,23 +52,18 @@ body.bp
 html, body
   height: 100%
 
-
-.orange
-  color: $orange
-
 $sidebar-width: 150px
-
-$container-width: 800px
+$container-width: 750px
 
 .page-container
   min-height: 100%
-  width: $container-width
 
 .page-sidebar
-  $sidebar-bg: #2C2C29
-  background-color: $sidebar-bg
+  $sidebar-bg: desaturate($font-color, 20%)
 
+  background-color: $sidebar-bg
   position: fixed
+
   width: $sidebar-width
 
   height: 100%
@@ -83,6 +80,7 @@ $container-width: 800px
     +box-shadow(darken($sidebar-bg, 10%) 0 3px 20px)
 
     h1
+      border: none
       font-size: 36px
       color: $sidebar-bg
       +text-shadow(lighten($zero-wind-bg, 10%) 0 1px 2px, darken($zero-wind-bg, 10%) 0 -1px 2px)
@@ -94,6 +92,7 @@ $container-width: 800px
         color: lighten($sidebar-bg, 10%)
 
   h2.my-name
+    border: none
     font-size: 22px
     text-align: center
     color: $zero-wind-bg
@@ -142,16 +141,12 @@ $container-width: 800px
 $padding: 15px
 $content-width: $container-width - $sidebar-width - 2*$padding
 
-.page-content
-  padding: $padding
+.related
+  outline: 1px red
 
-  position: absolute
-  margin-left: $sidebar-width
-  min-height: 100%
-  width: $container-width - $sidebar-width - 2*$padding
-
-.post-list
+body.bp .post-list
   ul.post-list-ul
+    width: $content-width
     margin: 0
     padding: 0
 
@@ -159,6 +154,7 @@ $content-width: $container-width - $sidebar-width - 2*$padding
     border-top: 1px solid darken($body-bg, 15%)
 
   li
+    clear: both
     list-style: none
     font-size: 14px
 
@@ -176,3 +172,41 @@ $content-width: $container-width - $sidebar-width - 2*$padding
       width: $date-width
       float: right
       text-align: right
+
+body.bp .page-content
+  padding: $padding
+
+  position: absolute
+  margin-left: $sidebar-width
+  min-height: 100%
+  max-width: $content-width
+
+  font-size: 16px
+
+  h1.page-title
+    margin-bottom: 0
+
+  .post-date
+    font-style: italic
+    text-align: right
+    color: mix($font-color, $body-bg, 50%)
+    font-size: 80%
+    margin-bottom: 10px
+
+  h1, h2, h3
+    color: #503e2b
+    +text-shadow(darken($body-bg, 45%) 0 -1px 1px, lighten($body-bg, 45%) 0 1px 1px)
+
+  h1
+    font-size: 150%
+    line-height: 150%
+    border-bottom: 4px solid darken($body-bg, 10%)
+
+  h2
+    font-size: 135%
+    line-height: 135%
+    border-bottom: 2px solid darken($body-bg, 10%)
+
+  h3
+    font-size: 120%
+    line-height: 120%
