Add trailing slash to resume link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
         <div class="page-nav">
           <ul>
             <li><a href="/">blog</a></li>
-            <li><a href="/resume">resume</a></li>
+            <li><a href="/resume/">resume</a></li>
             <li><a href="https://github.com/phleet">github</a></li>
             <li><a href="http://www.linkedin.com/profile/view?id=71283243">linkedin</a></li>
             <li><a href="http://stackoverflow.com/users/303911/jamie-wong">stack overflow</a></li>
