--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,40 +31,44 @@
 
   <body class="bp" onload="prettyPrint()">
     <div class="page-container">
-      <div class="page-sidebar">
+      <div class="page-sidebar-container">
+        <div class="page-sidebar">
 
-        <div class="zero-wind">
-          <a href="/"><h1 class="site-title">
-            Zerø Wind
-          </h1></a>
-        </div>
+          <div class="zero-wind">
+            <a href="/"><h1 class="site-title">
+              Zerø Wind
+            </h1></a>
+          </div>
 
-        <h2 class='my-name'>Jamie Wong</h2>
+          <h2 class='my-name'>Jamie Wong</h2>
 
-        <div class='short-bio'>
-          <p>
-            I'm a UWaterloo Software Engineering student from Ottawa.
-            I'm currently an intern at Facebook.
-          </p>
-        </div>
+          <div class='short-bio'>
+            <p>
+              I'm a UWaterloo Software Engineering student from Ottawa.
+              I'm currently an intern at Facebook.
+            </p>
+          </div>
 
-        <div class="page-nav">
-          <ul>
-            <li><a href="/">blog</a></li>
-            <li><a href="/resume/">resume</a></li>
-            <li><a href="https://github.com/phleet">github</a></li>
-            <li><a href="http://www.linkedin.com/profile/view?id=71283243">linkedin</a></li>
-            <li><a href="http://stackoverflow.com/users/303911/jamie-wong">stack overflow</a></li>
-          </ul>
+          <div class="page-nav">
+            <ul>
+              <li><a href="/">blog</a></li>
+              <li><a href="/resume/">resume</a></li>
+              <li><a href="https://github.com/phleet">github</a></li>
+              <li><a href="http://www.linkedin.com/profile/view?id=71283243">linkedin</a></li>
+              <li><a href="http://stackoverflow.com/users/303911/jamie-wong">stack overflow</a></li>
+            </ul>
+          </div>
         </div>
       </div>
 
-      <div class="page-content">
-        {% if page.title %}
-          <h1 class='page-title'>{{ page.title }}</h1>
-        {% endif %}
+      <div class="page-content-container">
+        <div class="page-content">
+          {% if page.title %}
+            <h1 class='page-title'>{{ page.title }}</h1>
+          {% endif %}
 
-        {{ content }}
+          {{ content }}
+        </div>
       </div>
     </div>
   </body>
