--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% if page.date %}
 <div class="post-date">
-  {{ page.date | date_to_long_string }}
+  Posted on {{ page.date | date:"%B %e, %Y" }}
 </div>
 {% endif %}
 
