--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -84,6 +84,8 @@ $left-pct: 30%
   width: 100% - $left-pct
 
 .page-sidebar
+  font-family: Questrial, "Helvetica Neue", Arial, Helvetica, sans-serif
+
   float: right
   width: $sidebar-width
   height: 100%
@@ -91,9 +93,10 @@ $left-pct: 30%
   $zero-wind-bg: lighten($sidebar-bg, 30%)
 
   .zero-wind
-    margin: 20px
+    margin: 20px 15px
     padding: 10px
     border: 1px solid lighten($sidebar-bg, 45%)
+    font-family: "Sansita One", "Helvetica Neue", Arial, Helvetica, sans-serif
 
     +background(linear-gradient(top, lighten($zero-wind-bg, 5%), darken($zero-wind-bg, 5%)))
     +border-radius(10px)
@@ -205,28 +208,29 @@ body.bp .page-content
 
   .post-date
     font-style: italic
-    text-align: right
+    text-align: left
     color: mix($font-color, $body-bg, 50%)
     font-size: 80%
     margin-bottom: 10px
 
   h1, h2, h3
+    font-family: Questrial, "Helvetica Neue", Arial, Helvetica, sans-serif
     color: #503e2b
     +text-shadow(darken($body-bg, 45%) 0 -1px 1px, lighten($body-bg, 45%) 0 1px 1px)
 
   h1
-    font-size: 150%
-    line-height: 150%
+    font-size: 175%
+    line-height: 175%
     border-bottom: 4px solid darken($body-bg, 10%)
 
   h2
-    font-size: 135%
-    line-height: 135%
+    font-size: 150%
+    line-height: 150%
     border-bottom: 2px solid darken($body-bg, 10%)
 
   h3
-    font-size: 120%
-    line-height: 120%
+    font-size: 125%
+    line-height: 125%
 
   code
     font-size: 90%
