--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -105,7 +105,7 @@ body.bp .page-sidebar
     text-decoration: none
 
     &:hover
-      color: lighten($sidebar-bg, 10%)
+      color: lighten($zero-wind-bg, 20%)
 
   h2.my-name
     border: none
