--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta property="og:image" content="http://jamie-wong.com/images/logo.png" />
     <meta property="og:site_name" content="{{ site.title }}" />
+    <meta property="fb:admins" content="1652790284" />
 
     <link rel="icon" href="/favicon.ico" />
 
