Post: Name your Arguments!
* Added stylesheets to gitignore
* Removed prettify sass
* Always display vertical scrollbars (prevents visual glitch for people
  running at high resolutions)

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -47,6 +47,8 @@ body.bp
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
 
+  overflow-y: scroll
+
   width: 100%
   min-height: 100%
 
