Not an FB employee anymore - added picture of myself

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,13 @@
             Zerø Wind
           </h1></a>
 
+          <div class='my-picture'></div>
+
           <h2 class='my-name'>Jamie Wong</h2>
 
           <div class='short-bio'>
             <p>
               I'm a uWaterloo Software Engineering student from Ottawa.
-              I'm currently an intern at Facebook.
             </p>
           </div>
 
