--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -117,6 +117,14 @@ body.bp .page-sidebar
     color: $zero-wind-bg
     +text-shadow(lighten($sidebar-bg, 10%) 0 1px 2px, darken($sidebar-bg, 5%) 0 -1px 2px)
 
+  .my-picture
+    background: url(/images/me.png)
+    width: 130px
+    height: 130px
+    border-radius: 10px
+    background-repeat: none
+    margin: 0 auto
+
   .short-bio
     color: $zero-wind-bg
     font-style: italic
