--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 
           <div class="page-nav">
             <ul>
-              <li><a href="/">blog</a></li>
+              <li><a href="/">posts</a></li>
               <li><a href="http://feeds.feedburner.com/jamiewong">feed</a></li>
               <li><a href="/resume/">resume</a></li>
               <li><a href="https://github.com/phleet">github</a></li>
