--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -171,7 +171,7 @@ $content-width: $container-width - $sidebar-width - 2*$padding
 body.bp .post-list
   ul.post-list-ul
     max-width: $content-width
-    margin: 0
+    margin: 0 0 1.5em 0
     padding: 0
 
   li + li
