Internship at KA started

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
           <div class='short-bio'>
             <p>
               I'm a uWaterloo Software Engineering student from Ottawa.
+              I'm currently an intern at Khan Academy.
             </p>
           </div>
 
