Styling for table of contents

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -256,6 +256,10 @@ body.bp .page-content
     margin: 0
 
 .post
+  .table-of-contents
+    ul
+      list-style: none
+
   img
     -webkit-background-clip: padding-box
     +border-radius(10px)
