Add solicitation to the bottom of posts

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -266,6 +266,16 @@ body.bp .page-content
     display: block
     +single-box-shadow(darken($body-bg, 50%), 0, 0, 0, 1px)
 
+  iframe
+    margin: 0 auto
+    display: block
+
+.solicitation
+  font-style: italic
+  margin: 25px 0
+  padding-top: 20px
+  border-top: 1px solid darken($body-bg, 35%)
+
 img.inline
   float: left
   margin-right: 10px
