--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,19 @@ layout: default
 {{ content }}
 </div>
 
+<div class="solicitation">
+    <p>
+        If you enjoyed this post and want to read more, you should <a
+        href="https://twitter.com/jlfwong">follow me on twitter</a>, or <a
+        href="http://feeds.feedburner.com/jamiewong">subscribe to the feed</a>. You can
+        also <a href="/">browse the archives</a>.
+    </p>
+
+    <a href="https://twitter.com/jlfwong" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @jlfwong</a>
+    <a href="https://twitter.com/share" data-count="none" data-text="{{page.title}}" class="twitter-share-button" data-lang="en" data-via="jlfwong">Tweet</a>
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+</div>
+
 <div class="related post-list">
   <h2>Related Posts</h2>
   <ul class="post-list-ul">
