--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -143,6 +143,9 @@ body.bp .page-sidebar
     $link-color: $zero-wind-bg
 
     a
+      display: block
+      line-height: 30px
+
       color: $link-color
       border: none
 
@@ -160,7 +163,6 @@ body.bp .page-sidebar
       list-style: none
       font-size: 16px
       text-align: right
-      line-height: 30px
 
     li + li
       border-top: 1px solid lighten($sidebar-bg, 10%)
@@ -217,23 +219,23 @@ body.bp .page-content
     margin-bottom: 10px
 
   h1, h2, h3
+    line-height: 125%
+    padding-bottom: 5px
+
     font-family: Questrial, "Helvetica Neue", Arial, Helvetica, sans-serif
     color: $font-color
-    +text-shadow(darken($body-bg, 45%) 0 -1px 1px, lighten($body-bg, 45%) 0 1px 1px)
+    +text-shadow(lighten($body-bg, 45%) 0 -1px 1px, lighten($body-bg, 45%) 0 1px 1px)
 
   h1
     font-size: 175%
-    line-height: 175%
     border-bottom: 4px solid darken($body-bg, 50%)
 
   h2
     font-size: 140%
-    line-height: 140%
     border-bottom: 1px solid darken($body-bg, 35%)
 
   h3
     font-size: 110%
-    line-height: 110%
 
   code
     font-size: 90%
@@ -264,7 +266,7 @@ body.bp .page-content
     +border-radius(10px)
     margin: 0 auto
     display: block
-    +single-box-shadow(darken($body-bg, 50%), 0, 0, 0, 1px)
+    +box-shadow(darken($body-bg, 50%), 0, 0, 0, 1px, darken($body-bg, 50%), 0, 0, 5px, 0)
 
   iframe
     margin: 0 auto
@@ -281,12 +283,106 @@ img.inline
   margin-right: 10px
   display: inline
 
-// TODO: Change to some reasonable max-width
-@media screen and (max-device-width: 800px), screen and (max-width: 800px)
-  body.bp .page-sidebar-container
-    position: static
-    height: 75px
-    width: 100%
+@media screen and (max-height: 602px)
+  body.bp
+    .page-sidebar
+      h1
+        margin-top: 10px
+
+      .my-picture
+        height: 20%
+
+      h2
+        margin-bottom: 0.25em
+
+      .short-bio
+        margin-bottom: 0
+        line-height: 1.4em
+
+      .page-nav
+        li
+          a
+            line-height: 28px
+
+@media screen and (max-height: 558px)
+  body.bp
+    .page-sidebar
+      h1
+        margin-top: 5px
+        margin-bottom: 5px
+
+      .my-picture
+        background-position: 0 -6px
+        height: 19%
+
+      .short-bio
+        display: none
+
+@media screen and (max-height: 460px)
+  body.bp
+    .page-sidebar
+      .my-picture
+        background-position: 0 -13px
+
+@media screen and (max-height: 412px)
+  body.bp
+    .page-sidebar
+      h2
+        margin: 0
+
+      .my-picture
+        display: none
+
+@media screen and (max-width: 875px)
+  body.bp
+    .page-sidebar-container
+      width: 28%
+
+    .page-content-container
+      margin-left: 28%
+      width: 72%
+
+@media screen and (max-width: 850px)
+  body.bp
+    .page-sidebar-container
+      width: 26%
+
+    .page-content-container
+      margin-left: 26%
+      width: 74%
+
+@media screen and (max-width: 825px)
+  body.bp
+    .page-sidebar-container
+      width: 24%
+
+    .page-content-container
+      margin-left: 24%
+      width: 76%
+
+@media screen and (max-width: 800px)
+  body.bp
+    .page-sidebar-container
+      width: 22%
+
+    .page-content-container
+      margin-left: 22%
+      width: 78%
+
+@media screen and (max-width: 775px)
+  body.bp
+    .page-sidebar-container
+      width: 20%
+
+    .page-content-container
+      margin-left: 20%
+      width: 80%
+
+@media screen and (max-device-width: 750px), screen and (max-width: 750px)
+  body.bp
+    .page-sidebar-container
+      position: static
+      width: 100%
 
     .page-sidebar
       height: auto
@@ -296,23 +392,42 @@ img.inline
       h1
         float: left
         text-align: left
-        margin-left: 15px
+        margin: 11px 15px 5px
 
       h2.my-name
         float: left
-        margin-top: 32px
+        margin: 25px 0 0
 
-    // TODO: Incorporate nav somehow?
-    .short-bio, .page-nav, .my-picture
-      display: none
+      .short-bio, .my-picture
+        display: none
 
-  body.bp .page-content-container
-    margin-left: 0%
-    width: 100%
+      .page-nav
+        clear: both
+        font-size: 11px
+
+        ul
+          display: table
+          padding: 0
+          width: 100%
+
+        li + li
+          border-top: 0
+
+        li
+          display: table-cell
+          font-size: 13px
+          text-align: center
+          padding: 0 1%
+
+    .page-content-container
+      margin-left: 0%
+      width: 100%
 
     .page-content
       max-width: 100%
+      padding-bottom: 40px
 
-  body.bp .post-list
-    ul.post-list-ul
-      max-width: 100%
+    .post-list
+      ul.post-list-ul
+        max-width: 100%
+        margin-bottom: 0
