--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <div class='short-bio'>
             <p>
               I'm a uWaterloo Software Engineering student from Ottawa.
-              I'm currently an intern at Khan Academy.
+              I rant about software.
             </p>
           </div>
 
