--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,7 @@ layout: default
   <div id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_identifier = "{{ page.url }}";
+    var disqus_url = "http://jamie-wong.com/{{ page.url }}";
     (function() {
      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
      dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
