Post: A Technological Guide to Eurotripping

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -221,6 +221,7 @@ body.bp .page-content
   h1, h2, h3
     line-height: 125%
     padding-bottom: 5px
+    clear: both
 
     font-family: Questrial, "Helvetica Neue", Arial, Helvetica, sans-serif
     color: $font-color
@@ -280,7 +281,7 @@ body.bp .page-content
 
 img.inline
   float: left
-  margin-right: 10px
+  margin: 0 10px 1.5em 0
   display: inline
 
 @media screen and (max-height: 602px)
