Post: Metaballs and Marching Squares

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -279,6 +279,12 @@ body.bp .page-content
   padding-top: 20px
   border-top: 1px solid darken($body-bg, 35%)
 
+.caption
+  text-align: center
+  margin-top: -1.5em
+  margin-bottom: 1.5em
+  font-style: italic
+
 img.inline
   float: left
   margin: 0 10px 1.5em 0
