Update page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,20 +33,16 @@
 
           <div class='short-bio'>
             <p>
-              I'm a uWaterloo Software Engineering student from Ottawa.
-              I rant about software.
+              I'm a uWaterloo Software Engineering alumnus, and proud
+              member of the Khan Academy engineering team.
             </p>
           </div>
 
           <div class="page-nav">
             <ul>
               <li><a href="/">posts</a></li>
-              <li><a href="http://feeds.feedburner.com/jamiewong">feed</a></li>
-              <li><a href="/resume/">resume</a></li>
               <li><a href="https://github.com/jlfwong">github</a></li>
               <li><a href="http://twitter.com/jlfwong">twitter</a></li>
-              <li><a href="http://www.linkedin.com/profile/view?id=71283243">linkedin</a></li>
-              <li><a href="http://stackoverflow.com/users/303911/jamie-wong">stack overflow</a></li>
             </ul>
           </div>
         </div>
