Post: Refactoring with Linters

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,12 @@ layout: default
 
 <div class="solicitation">
     <p>
+        If you want to help provide a free, world class education to anyone,
+        anywhere, <a href="https://khanacademy.org/careers">
+        Khan Academy is hiring.</a>
+    </p>
+
+    <p>
         If you enjoyed this post and want to read more, you should <a
         href="https://twitter.com/jlfwong">follow me on twitter</a>, or <a
         href="http://feeds.feedburner.com/jamiewong">subscribe to the feed</a>. You can
