Rewrite Post: Linters as Invariants

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -290,6 +290,9 @@ img.inline
   margin: 0 10px 1.5em 0
   display: inline
 
+.twitter-tweet
+  margin: 20px auto !important
+
 @media screen and (max-height: 602px)
   body.bp
     .page-sidebar
