--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 
           <div class='short-bio'>
             <p>
-              I'm a uWaterloo Software Engineering alumnus, and proud
-              member of the Khan Academy engineering team.
+              I'm a proud alumnus of the Khan Academy engineering team, and 
+              uWaterloo Software Engineering.
             </p>
           </div>
 
