--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,16 +13,9 @@ layout: default
 
 <div class="solicitation">
     <p>
-        If you want to help provide a free, world class education to anyone,
-        anywhere, <a href="https://khanacademy.org/careers">
-        Khan Academy is hiring.</a>
-    </p>
-
-    <p>
         If you enjoyed this post and want to read more, you should <a
-        href="https://twitter.com/jlfwong">follow me on twitter</a>, or <a
-        href="http://feeds.feedburner.com/jamiewong">subscribe to the feed</a>. You can
-        also <a href="/">browse the archives</a>.
+        href="https://twitter.com/jlfwong">follow me on twitter</a>.
+        You can also <a href="/">browse the archives</a>.
     </p>
 
     <a href="https://twitter.com/jlfwong" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @jlfwong</a>
