Post: Metaballs and WebGL

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -273,6 +273,10 @@ body.bp .page-content
     margin: 0 auto
     display: block
 
+    // Codepens
+    &.cp_embed_iframe
+      margin: 0 auto 24px auto
+
 .solicitation
   font-style: italic
   margin: 25px 0
