--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 
           <div class='short-bio'>
             <p>
-              I'm a proud alumnus of the Khan Academy engineering team, and 
-              uWaterloo Software Engineering.
+              Proud alumnus of University of Waterloo Software Engineering,
+              previously a member of Khan Academy's engineering team.
             </p>
           </div>
 
