--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  </head>
-  <body>
-    <ul>
-    {{ range .Data.Pages.ByPublishDate }}
-      <li>
-        <a href="{{ .Permalink }}">{{ .Title }}</a>
-      </li>
-    {{ end }}
-    </ul>
-  </body>
-</html>
+{{ define "title" }}{{ .Title }}{{ end }}
+{{ define "main" }}
+
+<ul>
+{{ range .Data.Pages.ByPublishDate }}
+  <li>
+    <a href="{{ .Permalink }}">{{ .Title }}</a>
+  </li>
+{{ end }}
+</ul>
+
+{{ end }}
