--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -8,6 +8,9 @@
   <meta property="fb:admins" content="1652790284" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="canonical" href="{{ .Permalink }}" />
+  <link rel="stylesheet" href="/stylesheets/screen.css" />
+  <link rel="stylesheet" href="/stylesheets/pygments-colorful.css" />
+  <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed|Source+Code+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body lang="en">
 {{ block "main" . }}{{ end }}
