--- a/hugo/layouts/post/single.html
+++ b/hugo/layouts/post/single.html
@@ -1,5 +1,7 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
-<h1>{{ .Title}}</h1>
+<article>
+<h1 class="title">{{ .Title}}</h1>
 {{ .Content }}
+</article>
 {{ end }}
