Nicer color scheme: mexico-light

--- a/hugo/static/stylesheets/screen.css
+++ b/hugo/static/stylesheets/screen.css
@@ -56,6 +56,16 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 150%;
 }
 
+pre, code {
+  font-family: "Source Code Pro", "Menlo", "Courier", monospace;
+  color: #4f4f4f;
+}
+
+h1 > code, h2 > code, h3 > code, h4 > code, h5 > code, h6 > code, a > code {
+  color: inherit;
+}
+
+
 h1.title {
   font-size: 36px;
   text-align: center;
@@ -89,6 +99,10 @@ strong {
   font-weight: bold;
 }
 
+em {
+  font-style: italic;
+}
+
 a {
   color: #ff6d6d;
   text-decoration: none;
@@ -96,11 +110,6 @@ a {
 
 a:hover {
   border-bottom: 1px solid #ff6d6d;
-}
-
-pre, code {
-  font-family: "Source Code Pro", "Courier", monospace;
-  color: #4f4f4f;
 }
 
 p > code {
