--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/favicon.ico" />
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/stylesheets/screen.css" />
-  <link rel="stylesheet" href="/stylesheets/pygments-colorful.css" />
+  <link rel="stylesheet" href="/stylesheets/pygments.css" />
   <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed|Source+Code+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body lang="en">
