--- a/hugo/static/stylesheets/pygments.css
+++ b/hugo/static/stylesheets/pygments.css
@@ -1,221 +1,73 @@
-/* non highlighted code colors */
-.highlight {
-  /* Comment */
-  /* Comment.Multiline */
-  /* Comment.Preproc */
-  /* Comment.Single */
-  /* Comment.Special */
-  /* Error */
-  /* Keyword */
-  /* Operator */
-  /* Operator */
-  /* Operator.Word */
-  /* Generic.Deleted */
-  /* Generic.Deleted.Specific */
-  /* Generic.Emph */
-  /* Generic.Heading */
-  /* Generic.Inserted */
-  /* Generic.Inserted.Specific */
-  /* Generic.Strong */
-  /* Generic.Subheading */
-  /* Keyword.Constant */
-  /* Keyword.Declaration */
-  /* Keyword.Pseudo */
-  /* Keyword.Reserved */
-  /* Keyword.Type */
-  /* Name.Attribute */
-  /* Name.Builtin */
-  /* Name.Class */
-  /* Name.Constant */
-  /* Name.Exception */
-  /* Name.Function */
-  /* Name.Namespace */
-  /* Name.Tag */
-  /* Name.Variable.Global */
-  /* Name.Variable.Instance */
-  /* Name.Variable */
-  /* Literal.Number.Float */
-  /* Literal.Number */
-  /* Literal.Number.Hex */
-  /* Literal.Number.Integer */
-  /* Literal.String */
-  /* Literal.String.Doc */
-  /* Literal.String.Double */
-  /* Literal.String.Escape */
-  /* Literal.String.Interpol */
-  /* Literal.String.Regex */
-  /* Literal.String.Single */
-}
-.highlight .c {
-  color: #586e75 !important;
-  font-style: italic !important;
-}
-.highlight .cm {
-  color: #586e75 !important;
-  font-style: italic !important;
-}
-.highlight .cp {
-  color: #586e75 !important;
-  font-style: italic !important;
-}
-.highlight .c1 {
-  color: #586e75 !important;
-  font-style: italic !important;
-}
-.highlight .cs {
-  color: #586e75 !important;
-  font-weight: bold !important;
-  font-style: italic !important;
-}
-.highlight .err {
-  color: #dc322f !important;
-  background: none !important;
-}
-.highlight .k {
-  color: #cb4b16 !important;
-}
-.highlight .o {
-  color: #93a1a1 !important;
-  font-weight: bold !important;
-}
-.highlight .p {
-  color: #93a1a1 !important;
-}
-.highlight .ow {
-  color: #2aa198 !important;
-  font-weight: bold !important;
-}
-.highlight .gd {
-  color: #93a1a1 !important;
-  background-color: #372c34 !important;
-  display: inline-block;
-}
-.highlight .gd .x {
-  color: #93a1a1 !important;
-  background-color: #4d2d33 !important;
-  display: inline-block;
-}
-.highlight .ge {
-  color: #93a1a1 !important;
-  font-style: italic !important;
-}
-.highlight .gh {
-  color: #586e75 !important;
-}
-.highlight .gi {
-  color: #93a1a1 !important;
-  background-color: #1a412b !important;
-  display: inline-block;
-}
-.highlight .gi .x {
-  color: #93a1a1 !important;
-  background-color: #355720 !important;
-  display: inline-block;
-}
-.highlight .gs {
-  color: #93a1a1 !important;
-  font-weight: bold !important;
-}
-.highlight .gu {
-  color: #6c71c4 !important;
-}
-.highlight .kc {
-  color: #859900 !important;
-  font-weight: bold !important;
-}
-.highlight .kd {
-  color: #268bd2 !important;
-}
-.highlight .kp {
-  color: #cb4b16 !important;
-  font-weight: bold !important;
-}
-.highlight .kr {
-  color: #d33682 !important;
-  font-weight: bold !important;
-}
-.highlight .kt {
-  color: #2aa198 !important;
-}
-.highlight .n {
-  color: #268bd2 !important;
-}
-.highlight .na {
-  color: #268bd2 !important;
-}
-.highlight .nb {
-  color: #859900 !important;
-}
-.highlight .nc {
-  color: #d33682 !important;
-}
-.highlight .no {
-  color: #b58900 !important;
-}
-.highlight .nl {
-  color: #859900 !important;
-}
-.highlight .ne {
-  color: #268bd2 !important;
-  font-weight: bold !important;
-}
-.highlight .nf {
-  color: #268bd2 !important;
-  font-weight: bold !important;
-}
-.highlight .nn {
-  color: #b58900 !important;
-}
-.highlight .nt {
-  color: #268bd2 !important;
-  font-weight: bold !important;
-}
-.highlight .nx {
-  color: #b58900 !important;
-}
-.highlight .vg {
-  color: #268bd2 !important;
-}
-.highlight .vi {
-  color: #268bd2 !important;
-}
-.highlight .nv {
-  color: #268bd2 !important;
-}
-.highlight .mf {
-  color: #2aa198 !important;
-}
-.highlight .m {
-  color: #2aa198 !important;
-}
-.highlight .mh {
-  color: #2aa198 !important;
-}
-.highlight .mi {
-  color: #2aa198 !important;
-}
-.highlight .s {
-  color: #2aa198 !important;
-}
-.highlight .sd {
-  color: #2aa198 !important;
-}
-.highlight .s2 {
-  color: #2aa198 !important;
-}
-.highlight .se {
-  color: #dc322f !important;
-}
-.highlight .si {
-  color: #268bd2 !important;
-}
-.highlight .sr {
-  color: #2aa198 !important;
-}
-.highlight .s1 {
-  color: #2aa198 !important;
-}
-.highlight div .gd, .highlight div .gd .x, .highlight div .gi, .highlight div .gi .x {
-  display: inline-block;
-  width: 100%;
-}
+/*
+
+    Name:       Base16 Mexico Light Dark
+    Author:     Sheldon Johnson
+
+    Pygments template by Jan T. Sott (https://github.com/idleberg)
+    Created with Base16 Builder by Chris Kempson (https://github.com/chriskempson/base16-builder)
+
+    https://github.com/drzel/base16-mexico-light-scheme
+*/
+.highlight .c { color: #b8b8b8 } /* Comment */
+.highlight .err { color: #ab4642 } /* Error */
+.highlight .k { color: #96609e } /* Keyword */
+.highlight .l { color: #dc9656 } /* Literal */
+.highlight .n { color: #181818 } /* Name */
+.highlight .o { color: #4b8093 } /* Operator */
+.highlight .p { color: #181818 } /* Punctuation */
+.highlight .cm { color: #b8b8b8 } /* Comment.Multiline */
+.highlight .cp { color: #b8b8b8 } /* Comment.Preproc */
+.highlight .c1 { color: #b8b8b8 } /* Comment.Single */
+.highlight .cs { color: #b8b8b8 } /* Comment.Special */
+.highlight .gd { color: #ab4642 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gh { color: #181818; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #538947 } /* Generic.Inserted */
+.highlight .gp { color: #b8b8b8; font-weight: bold } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #4b8093; font-weight: bold } /* Generic.Subheading */
+.highlight .kc { color: #96609e } /* Keyword.Constant */
+.highlight .kd { color: #96609e } /* Keyword.Declaration */
+.highlight .kn { color: #4b8093 } /* Keyword.Namespace */
+.highlight .kp { color: #96609e } /* Keyword.Pseudo */
+.highlight .kr { color: #96609e } /* Keyword.Reserved */
+.highlight .kt { color: #f79a0e } /* Keyword.Type */
+.highlight .ld { color: #538947 } /* Literal.Date */
+.highlight .m { color: #dc9656 } /* Literal.Number */
+.highlight .s { color: #538947 } /* Literal.String */
+.highlight .na { color: #7cafc2 } /* Name.Attribute */
+.highlight .nb { color: #181818 } /* Name.Builtin */
+.highlight .nc { color: #f79a0e } /* Name.Class */
+.highlight .no { color: #ab4642 } /* Name.Constant */
+.highlight .nd { color: #4b8093 } /* Name.Decorator */
+.highlight .ni { color: #181818 } /* Name.Entity */
+.highlight .ne { color: #ab4642 } /* Name.Exception */
+.highlight .nf { color: #7cafc2 } /* Name.Function */
+.highlight .nl { color: #181818 } /* Name.Label */
+.highlight .nn { color: #f79a0e } /* Name.Namespace */
+.highlight .nx { color: #7cafc2 } /* Name.Other */
+.highlight .py { color: #181818 } /* Name.Property */
+.highlight .nt { color: #4b8093 } /* Name.Tag */
+.highlight .nv { color: #ab4642 } /* Name.Variable */
+.highlight .ow { color: #4b8093 } /* Operator.Word */
+.highlight .w { color: #181818 } /* Text.Whitespace */
+.highlight .mf { color: #dc9656 } /* Literal.Number.Float */
+.highlight .mh { color: #dc9656 } /* Literal.Number.Hex */
+.highlight .mi { color: #dc9656 } /* Literal.Number.Integer */
+.highlight .mo { color: #dc9656 } /* Literal.Number.Oct */
+.highlight .sb { color: #538947 } /* Literal.String.Backtick */
+.highlight .sc { color: #181818 } /* Literal.String.Char */
+.highlight .sd { color: #b8b8b8 } /* Literal.String.Doc */
+.highlight .s2 { color: #538947 } /* Literal.String.Double */
+.highlight .se { color: #dc9656 } /* Literal.String.Escape */
+.highlight .sh { color: #538947 } /* Literal.String.Heredoc */
+.highlight .si { color: #dc9656 } /* Literal.String.Interpol */
+.highlight .sx { color: #538947 } /* Literal.String.Other */
+.highlight .sr { color: #538947 } /* Literal.String.Regex */
+.highlight .s1 { color: #538947 } /* Literal.String.Single */
+.highlight .ss { color: #538947 } /* Literal.String.Symbol */
+.highlight .bp { color: #181818 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #ab4642 } /* Name.Variable.Class */
+.highlight .vg { color: #ab4642 } /* Name.Variable.Global */
+.highlight .vi { color: #ab4642 } /* Name.Variable.Instance */
+.highlight .il { color: #dc9656 } /* Literal.Number.Integer.Long */
