--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   <meta property="og:image" content="http://jamie-wong.com/images/logo.png" />
   <meta property="og:site_name" content="{{ .Site.Title }}" />
   <meta property="fb:admins" content="1652790284" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/stylesheets/screen.css" />
