--- a/hugo/layouts/post/single.html
+++ b/hugo/layouts/post/single.html
@@ -1,5 +1,17 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
+<header>
+  <a href="/">
+    <img src="/images/Avatar Trace.svg" />
+  </a>
+  <div class="site-text">
+    <a href="/">
+      <div class="site-title">Zerø Wind</div>
+    </a>
+    <div class="my-name">Jamie Wong</div>
+    <div class="post-date">{{ .Date.Format "January 2, 2006" }}</div>
+  </div>
+</header>
 <article>
 <h1 class="title">{{ .Title}}</h1>
 {{ .Content }}
