Responsive sidebar -> move on top

--- a/hugo/layouts/post/single.html
+++ b/hugo/layouts/post/single.html
@@ -1,9 +1,11 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
 <header>
-  <a href="/">
-    <img src="/images/Avatar Trace.svg" />
-  </a>
+  <div class="trace-of-me">
+    <a href="/">
+      <img src="/images/Avatar Trace.svg" />
+    </a>
+  </div>
   <div class="site-text">
     <a href="/">
       <div class="site-title">Zerø Wind</div>
