Avatar trace hover

--- a/hugo/layouts/post/single.html
+++ b/hugo/layouts/post/single.html
@@ -3,7 +3,8 @@
 <header>
   <div class="trace-of-me">
     <a href="/">
-      <img src="/images/Avatar Trace.svg" />
+      <img class="regular" src="/images/Avatar Trace.svg" />
+      <img class="eyebrow" src="/images/Eyebrow Raise.svg" />
     </a>
   </div>
   <div class="site-text">
