--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -14,7 +14,10 @@
   <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed|Source+Code+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body lang="en">
+{{ partial "header.html" . }}
+<div id="main">
 {{ block "main" . }}{{ end }}
+</div>
 {{ partial "analytics.html" }}
 </body>
 </html>
