--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -10,6 +10,8 @@
       <div class="site-title">Zerø Wind</div>
     </a>
     <div class="my-name">Jamie Wong</div>
+    {{ if .IsPage }}
     <div class="post-date">{{ .Date.Format "January 2, 2006" }}</div>
+    {{ end }}
   </div>
 </header>
