--- a/hugo/layouts/partials/author.html
+++ b/hugo/layouts/partials/author.html
@@ -1,4 +1,4 @@
-<header>
+<div class="author">
   <div class="trace-of-me">
     <a href="/">
       <img class="regular" src="/images/Avatar Trace.svg" />
@@ -14,4 +14,4 @@
     <div class="post-date">{{ .Date.Format "January 2, 2006" }}</div>
     {{ end }}
   </div>
-</header>
+</div>
