--- a/hugo/static/stylesheets/screen.css
+++ b/hugo/static/stylesheets/screen.css
@@ -102,11 +102,12 @@ figure {
   text-align: center;
 }
 
-.caption, caption, figcaption {
+caption, figcaption {
   font-style: italic;
   text-align: center;
   font-size: 16px;
   line-height: 1;
+  margin-top: 5px;
 }
 
 blockquote {
@@ -138,7 +139,7 @@ a[rel=footnote]::after {
 /* Spacing */
 
 #main {
-  padding: 30px 10px 0 10px;
+  padding: 0 10px 0 10px;
   max-width: 750px;
   margin: 0 auto;
 }
@@ -213,20 +214,20 @@ ul.postlist li {
 }
 
 
-/* Site nav */
-header {
-  height: 260px;
-  overflow: visible;
-  margin: 0 auto -260px auto;
-  width: 130px;
-  /* 750 / 2 + 130 / 2 + 60 = 500 */
-  transform: translate(-500px, 70px);
+/* Author block */
+.author {
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin: 30px auto 30px auto;
+  width: 100%;
+  max-width: 750px;
+  transform: none;
+  width: 290px;
+  flex-direction: row;
 }
 
-header a, header a:hover {
+.author a, .author a:hover {
   color: inherit;
   border-bottom: none;
 }
@@ -260,26 +261,10 @@ header a, header a:hover {
   line-height: 125%;
 }
 
-@media (max-width: 1130px) {
-  header {
-    height: auto;
-    margin: 30px auto 0 auto;
-    width: 100%;
-    max-width: 750px;
-    transform: none;
-    width: 290px;
-    flex-direction: row;
-  }
-
-  .trace-of-me {
-    float: left;
-  }
-
-  .site-text {
-    height: 130px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 30px;
-  }
+.site-text {
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 30px;
 }
