--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/stylesheets/screen.css" />
   <link rel="stylesheet" href="/stylesheets/pygments.css" />
+  <link href="/atom.xml" rel="alternate" title="Zero Wind :: Jamie Wong" type="application/atom+xml">
   <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed|Source+Code+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body lang="en" {{ if .IsHome }}class="homepage"{{ end }}>
