Add homepage bio blurb

--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -1,6 +1,12 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
 
+<p>Hi there!</p>
+<p>I'm an engineer from 🇨🇦 living in San Francisco, where
+I work on design tools at <a href="https://www.figma.com">Figma</a>.</p>
+<p>I'm a <a href="https://uwaterloo.ca/software-engineering/">uWaterloo SoftEng</a> alumnus, and a past member of the <a href="https://www.khanacademy.org">Khan Academy</a> engineering team.</p>
+<p>Here are some things I've written:</p>
+
 <ul class="postlist">
 {{ range .Data.Pages.ByPublishDate }}
   <li>
